--- a/package.json
+++ b/package.json
@@ -1,27 +1,47 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build && vite build --ssr"
-    },
-    "devDependencies": {
-        "@headlessui/react": "^1.4.2",
-        "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
-        "@types/ziggy-js": "^1.3.2",
-        "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.6.1",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.18",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
-        "vite": "^4.0.0"
-    }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build"
+	},
+	"dependencies": {
+		"@emotion/react": "11.11.1",
+		"@emotion/styled": "11.11.0",
+		"@mui/icons-material": "5.14.15",
+		"@mui/joy": "5.0.0-beta.12",
+		"@mui/material": "5.14.15",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sass": "1.69.5",
+		"@react-three/drei": "9.88.7",
+		"@react-three/fiber": "8.15.8",
+		"@types/three": "0.143.0",
+		"@use-gesture/react": "10.2.17",
+		"leva": "0.9.30",
+		"three": "0.158.0"
+	},
+	"devDependencies": {
+		"@headlessui/react": "^1.4.2",
+		"@inertiajs/react": "^1.0.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@types/node": "^18.13.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.10",
+		"@types/ziggy-js": "^1.3.2",
+		"@vitejs/plugin-react": "^4.0.3",
+		"@typescript-eslint/eslint-plugin": "6.0.0",
+		"@typescript-eslint/parser": "6.0.0",
+		"eslint": "8.45.0",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.3",
+		"autoprefixer": "^10.4.12",
+		"axios": "^1.1.2",
+		"laravel-vite-plugin": "^0.8.0",
+		"postcss": "^8.4.18",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"typescript": "^5.0.2",
+		"vite": "^4.0.0"
+	}
 }
