--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"leva": "0.9.30",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-toastify": "^9.1.3",
 		"sass": "1.69.5",
 		"three": "0.158.0"
 	},
