--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
+        "socialiteproviders/google": "^4.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
